--- a/ProductStore/Site.Master
+++ b/ProductStore/Site.Master
@@ -14,7 +14,7 @@
 
     <webopt:bundlereference runat="server" path="~/Content/css" />
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
-
+    <link href="Content/Dropdown.css" rel="stylesheet" />
 </head>
 <body>
     <form runat="server">
@@ -52,7 +52,14 @@
                     <ul class="nav navbar-nav">
                         <li><a runat="server" href="~/">Home</a></li>
                         <li><a runat="server" href="~/Category/Category">Category</a></li>
-                        <li><a runat="server" href="~/Product/Products">Product</a></li>
+                       
+                       <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="">Product</a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="../Product/Products">Product Details</a></li>
+                                    <li><a class="dropdown-item" href="../Product/ProductDetails">Add New Product</a></li>
+                                </ul>
+                            </li>
+      
                     </ul>
                 </div>
             </div>
